--- a/assets/simple-chat.css
+++ b/assets/simple-chat.css
@@ -5,6 +5,7 @@
 
 body {
 	font-family: sans-serif;
+	background-color: #fff;
 }
 
 
@@ -46,6 +47,8 @@ body {
 	padding: 10px;
 	background: #eee;
 	overflow: hidden;
+
+	box-shadow: 0 0 2px 0 rgba(0,0,0,0.5);
 
 	width: 100%;
 }
