--- a/assets/simple-chat.css
+++ b/assets/simple-chat.css
@@ -11,7 +11,6 @@ body {
 
 
 #ChatRoom {
-	padding-bottom: 70px;
 	scroll-behavior: smooth;
 
 	position: absolute;
@@ -20,6 +19,7 @@ body {
 
 	width: 100%;
 	height: 100%;
+	height: calc(100% - 70px);
 
 	overflow-y: scroll;
 	overflow-x: hidden;
@@ -29,6 +29,7 @@ body {
 	background: #eee;
 	border-radius: 5px;
 	padding: 5px;
+	word-break: break-word;
 }
 #ChatRoom .message[data-admin=yes] {
 	background: #444;
